--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "web3": "^1.5.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm app.js"
   },
   "repository": {
     "type": "git",
